<resources>
    <string name="app_name">GoPack</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="hint_trip_name">Nombre del Viaje (ej: Vacaciones Verano)</string>
    <string name="hint_trip_destination">Destino (ej: Roma, Italia)</string>
    <string name="hint_start_date_optional">Fecha Inicio (AAAA-MM-DD - Opcional)</string>
    <string name="hint_end_date_optional">Fecha Fin (AAAA-MM-DD - Opcional)</string>
    <string name="button_save_trip">Guardar Viaje</string>
    <string name="title_activity_add_trip">¡Prepara una Nueva Aventura!</string>
    <string name="title_activity_update_trip">Actualizar Viaje</string>
    <string name="add_new_packing_item">Añadir nuevo ítem al equipaje</string>
    <string name="title_activity_trip_detail">Detalles del Viaje</string>
    <string name="action_edit_trip">Editar</string>
    <string name="action_delete_trip">Borrar</string>
    <string name="delete_trip_confirmation_title">Confirmar Borrado</string>
    <string name="delete_trip_confirmation_message">¿Estás seguro de que quieres borrar el viaje \"%1$s\"? Esta acción no se puede deshacer.</string>
    <string name="dialog_delete">Borrar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="hint_item_name">Nombre del Ítem (ej: Camiseta manga corta)</string>
    <string name="hint_item_category_optional">Categoría (ej: Ropa - Opcional)</string>
    <string name="hint_item_quantity">Cantidad</string>
    <string name="dialog_title_add_item">Añadir Nuevo Ítem</string>
    <string name="dialog_add">Añadir</string>
    <string name="edit_packing_item">Editar ítem</string>
    <string name="label_category">Categoría</string>
    <string name="label_packing_list">Lista de Equipaje:</string>
    <string name="empty_packing_list_message">¡Tu lista de equipaje está vacía!\nAñade ítems o empieza con una plantilla.</string>
    <string name="button_use_template">Usar Plantilla</string>
    <string name="dialog_title_select_template">Selecciona una Plantilla</string>
    <string name="start_date_not_defined">Fecha inicio no definida</string>
    <string name="end_date_not_defined">Fecha fin no definida</string>
    <string name="title_my_trips">Mis Viajes</string>
    <string name="empty_main_activity_message">¡Prepara tu Próxima Aventura!</string>
    <string name="empty_main_activity_submessage">Parece que aún no tienes viajes. ¡Empieza a planificar pulsando el botón de abajo o el "+"!</string>
    <string name="button_create_first_trip">Crear Mi Primer Viaje</string>
</resources>